Task3/network.tf
resource "aws_vpc" "exadel-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "vpc"
  }
}


// Public Subnet
resource "aws_subnet" "public-subnet" {
  vpc_id = aws_vpc.exadel-vpc.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name = "Public Subnet"
  }
}

// Private Subnet
resource "aws_subnet" "private-subnet" {
  vpc_id = aws_vpc.exadel-vpc.id
  cidr_block = "10.0.10.0/24"
  tags = {
    Name = "Public Subnet"
  }
}
